--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "antd": "^4.8.2",
     "mobx": "^6.0.3",
+    "mobx-react": "^7.0.4",
     "mobx-react-lite": "^3.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
