--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "browser-notificator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://na-613c.github.io/browser-notificator",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.56"
+    "@types/react": "^16.9.56",
+    "gh-pages": "^3.1.0"
   }
 }
